--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0",
     "bootstrap": "^5.1.1",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-daterangepicker-material": "^2.4.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
