--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "bootstrap": "^5.1.1",
+    "moment": "^2.29.1",
     "ngx-bootstrap": "^7.1.0",
     "ngx-daterangepicker-material": "^2.4.2",
     "popper.js": "^1.16.1",
