--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "bootstrap": "^5.1.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ng2-pdf-viewer": "^7.0.1",
     "ngx-bootstrap": "^7.1.0",
     "ngx-daterangepicker-material": "^2.4.2",
+    "ngx-extended-pdf-viewer": "^10.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
