--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ng-multiselect-dropdown": "^0.3.4",
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-bootstrap": "^7.1.0",
     "ngx-daterangepicker-material": "^2.4.2",
